--- a/home.html
+++ b/home.html
@@ -12,12 +12,13 @@
   </head>
 
   <body>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"> 	&uarr; Back to Top</button>
     <div class="column">
       <div class="navbar-flex-container">
 
         <!-- Brand Logo -->
         <div class="row">
-          <h1 class="name"><a href="#">Full Name</a></h1>
+          <h1 class="name"><a href="#"> Full Name</a></h1>
         </div>
       
         <!-- Menu Items -->
@@ -116,5 +117,26 @@
   
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-  </body>
+<script>
+  //Get the button
+  var mybutton = document.getElementById("myBtn");
+  
+  // When the user scrolls down 20px from the top of the document, show the button
+  window.onscroll = function() {scrollFunction()};
+  
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      mybutton.style.display = "block";
+    } else {
+      mybutton.style.display = "none";
+    }
+  }
+  
+  // When the user clicks on the button, scroll to the top of the document
+  function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+  }
+  </script>  
+</body>
 </html>
