projects grid display

--- a/home.html
+++ b/home.html
@@ -48,30 +48,46 @@
         </div>
         <div class="projects-div">
           <div class="projects-row">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card">
+              <div id="project-img">
+              <img src="images/bostonairportcab.png" class="card-img-top" alt="...">
+            </div>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6>Boston Airport Cab Redesign</h6>
+                <p class="card-text">UI/UX &#183; </p>
+                <a href="#bostonairportcab" class="stretched-link"></a>
               </div>
             </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card">
+              <div id="project-img">
+              <img src="images/electry.jpg" class="card-img-top" alt="...">
+            </div>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6>Electry Y'20 Iterative Design</h6>
+                <p class="card-text"> UI/UX &#183;</p>
+                <a href="#electry" class="stretched-link"></a>
               </div>
             </div>
           </div>
           <div class="projects-row">
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card">
+              <div id="project-img">
+              <img src="images/thevanitystore.png" class="card-img-top" alt="...">
+            </div>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6>The Vanity Store </h6>
+                <p class="card-text"> E-Commerce &#183; ReactJS</p>
+                <a href="#thevanitystore" class="stretched-link"></a>
               </div>
             </div>
-            <div class="card" style="width: 18rem;">
-              <img src="..." class="card-img-top" alt="...">
+            <div class="card">
+              <div id="project-img">
+              <img src="images/shareheartbeat.jpeg" class="card-img-top" alt="...">
+            </div>
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h6>ShareHeartBeat </h6>
+                <p class="card-text"> Prototyping &#183; RaspberryPi &#183; Python Web Sockets </p>
+                <a href="#shareheartbeat" class="stretched-link"></a>
               </div>
             </div>
 
