all uiux projects

--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
               <div class="card-body">
                 <h6>Electry Y'20 Iterative Design</h6>
                 <p class="card-text"> UI/UX </p>
-                <a href="#electry" class="stretched-link"></a>
+                <a href="projects/electry.html" class="stretched-link"></a>
               </div>
             </div>
           </div>
@@ -77,7 +77,7 @@
               <div class="card-body">
                 <h6>The Vanity Store </h6>
                 <p class="card-text"> E-Commerce &#183; ReactJS</p>
-                <a href="#thevanitystore" class="stretched-link"></a>
+                <a href="projects/thevanitystore.html" class="stretched-link"></a>
               </div>
             </div>
             <div class="card">
@@ -87,7 +87,7 @@
               <div class="card-body">
                 <h6>ShareHeartBeat </h6>
                 <p class="card-text"> RaspberryPi &#183; Python Web Sockets </p>
-                <a href="#shareheartbeat" class="stretched-link"></a>
+                <a href="projects/shareheartbeat.html" class="stretched-link"></a>
               </div>
             </div>
 
@@ -107,7 +107,9 @@
           <div class="item" style="background-color:grey;"><h6 style="color:white; ">Image of me</h6></div>
           
           <div class="item" id="social-media">
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec enim neque. Phasellus iaculis quis odio eget vehicula. Aenean venenatis turpis lectus, id dapibus eros lacinia vel. Nullam cursus sem quis fringilla ornare. Fusce interdum massa vel tortor elementum ullamcorper. Interdum et malesuada fames ac ante,. Vestibulum porttitor euismod dictum. Curabitur nec enim neque.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec enim neque. Phasellus iaculis quis odio eget vehicula. Aenean venenatis turpis lectus, id dapibus eros lacinia vel. Nullam cursus sem quis fringilla ornare. Fusce interdum massa vel tortor elementum ullamcorper. Interdum et malesuada fames ac ante,. Vestibulum porttitor euismod dictum. Curabitur nec enim neque.
+              Feel free to contact me, if you'd like to learn more!
+            </p>
             <div class="row">
             <a href="" target="_blank"><img src="media_icons/linkedin.png" alt="linkedin: snigsinha" id="social-media-img"></a>
             <a href="" target="_blank"><img src="media_icons/twitter.png" alt="twitter: snigsinha" id="social-media-img"></a>
