--- a/projects/bostonairportcab.html
+++ b/projects/bostonairportcab.html
@@ -147,7 +147,7 @@
     </div>
 
     <div class="section">
-      <h2>Prototyping</h2>
+      <h2> 2. Prototyping</h2>
       
       <h5>Low-Fidelity (Balsamiq Wireframes 3)</h5>
 
@@ -183,8 +183,8 @@
     </div>
 
     <div class="section">
-      <h2>Responsive Webpage Implementation</h2>
-      <p>Using Flex Box and Bootstrap, I was able to implement the redesign of the page in HTML and CSS. You'll notice that in this redesign, the user is able to easily change options without having to restart their reservation. 
+      <h2> 3. Responsive Webpage Implementation</h2>
+      <p>Using Flexbox and Bootstrap, I was able to implement the redesign of the page in HTML and CSS. You'll notice that in this redesign, the user is able to easily change options without having to restart their reservation. 
       </p>
 
 
