--- a/projects/bostonairportcab.html
+++ b/projects/bostonairportcab.html
@@ -37,7 +37,7 @@
           <ol>
             <li> Analyze its usability</li>
             <li>Redesign the webpage with a lo-fi and hi-fi prototype</li>
-            <li>Implement a responsive redesign</li>
+            <li>Implement a more usable & responsive webpage</li>
           </ol>
         </p>
           <p>
@@ -167,8 +167,8 @@
     
 
       <h3>Hi-Fidelity (Figma)</h3>
-      <p>The hi-fi prototypes look pretty much like the lo-fi prototypes. I focussed on keeping the colours and look very simple.
-        The orange works as an accent colour for the buttons and progress bar. The navy blue works as the main colour.
+      <p>The next step was to implemen a hi-fi protoype. The hi-fi prototype is similar to the lo-fi prototype. I focussed on keeping the colours and look very simple.
+        The orange works as an accent colour for the buttons and progress bar. The navy blue works as the main colour. 
       </p>
       <img src="bostonairportcab/figma/desktop.jpg" class="webpage"/>
   
@@ -189,6 +189,7 @@
 
 
       <img src="bostonairportcab/redesign.png" class="webpage"/>
+      <a href="https://github.com/snigsinha/cs1300-redesign"><h3>Check out the Github Repository!</h3></a>
 
     </div>
     
