--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 
         <!-- Brand Logo -->
         <div class="row">
-          <h1 class="name"><a href="#"> Full Name</a></h1>
+          <h1 class="name"><a href="#"> Snigdha Sinha</a></h1>
         </div>
       
         <!-- Menu Items -->
