--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
       <div class="about-home">
         <div class="short-about">
           <h1 class="short-about-text-name">Hi, I'm Snigdha!</h1>
-          <h3 class="short-about-text">I’m a student at Brown Univerity studying Computer Science & Economics.<br> Prev: @Audible @HP</h3> 
+          <h3 class="short-about-text">I’m a student at Brown University studying Computer Science & Economics.<br> Prev: @Audible @HP</h3> 
 
           
         </div>
