--- a/projects/shareheartbeat.html
+++ b/projects/shareheartbeat.html
@@ -123,7 +123,7 @@ We brainstormed where to place the pulse sensor. In order to test the best locat
                 </div>
 
                 <div class="section">
-                    <a href=""> <h2>Video Demo Coming Soon (Gives away anonymity)</h2></a>
+                    <!-- <a href=""> <h2>Video Demo Coming Soon (Gives away anonymity)</h2></a> -->
 
                 </div>
 
